--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-native-vector-icons": "^6.4.14",
     "expo": "^49.0.0",
     "react": "18.2.0",
@@ -22,7 +24,8 @@
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.9.0",
     "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.1.2",
     "reanimated-color-picker": "^2.3.2"
