--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/react-native-vector-icons": "^6.4.14",
-    "expo": "^49.0.0",
+    "expo": "^50.0.15",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-paper": "^5.11.2",
     "react-native-reanimated": "^3.4.2",
@@ -34,21 +34,22 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.7",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.5",
-    "prettier": "^2.4.1",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "5.0.4"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
