style: transparent nav bar and login screen
add transparent system nav bar and fix  status bar style issue, also more UI changes added to login screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.materialyou"
+    namespace "com.huedo"
     defaultConfig {
-        applicationId "com.materialyou"
+        applicationId "com.huedo"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
