--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,7 +26,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'MaterialYou' do
+target 'HueDo' do
   use_expo_modules!
   post_integrate do |installer|
     begin
@@ -55,7 +55,7 @@ target 'MaterialYou' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'MaterialYouTests' do
+  target 'HueDoTests' do
     inherit! :complete
     # Pods for testing
   end
