--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
+apply plugin: 'com.google.gms.google-services' // <- Add this line
 
 apply plugin: "com.facebook.react"
 
