--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-firebase/app": "^21.2.0",
     "@react-native-firebase/auth": "^21.2.0",
     "@react-native-firebase/database": "^21.2.0",
@@ -20,9 +20,10 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.4.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "expo": "^50.0.15",
+    "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.21.0",
@@ -31,8 +32,9 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.1.2",
-    "reanimated-color-picker": "^2.3.2"
+    "react-redux": "^8.1.3",
+    "reanimated-color-picker": "^2.3.2",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
