--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.2",
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-firebase/app": "^21.2.0",
-    "@react-native-firebase/auth": "^21.2.0",
-    "@react-native-firebase/database": "^21.2.0",
-    "@react-native-firebase/storage": "^21.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-firebase/app": "20.4.0",
+    "@react-native-firebase/auth": "20.4.0",
+    "@react-native-firebase/firestore": "20.4.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
